# Point-Cloud-Highlighter

./: .gitignore  CMakeLists.txt  README.md  default.rviz  package.xml  setup.py
launch/: offline_fitting.launch
src/: helpers.py  highlighter.py  interactive_marker.py  pc_selector.py  radius_panel.py  read_bag.py  utils.py
