<?xml version="1.0"?>
<package format="2">
  <name>plant_time</name>
  <version>0.0.0</version>
  <description>plant_time</description>

  <maintainer email="pmitrano@umich.edu">pmitrano</maintainer>


  <license>BSD</license>

  <author >Peter Mitrano</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
